# opencode

./: .gitignore  .mnemopi-session-context.json  .spectral.yaml  AGENTS.md  BRANDING.md  CNAME  CONTRIBUTING.md  GOVERNANCE.md  INDEX.md  LEAFS.md  LICENSE  NOTICE.md  PROJECT.md  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  RELEASE_READINESS_BINDER.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TOOL_GUIDE.md  (+99 more)
.build/: tool-system-dependency-graph.json
.omp/: lsp.json  mcp-manifest.v1.json  mcp.json  tool-mapping.md  tool-tools-package.json
.opencode/: .gitignore  INSTALL.md  README.md  dependency-saboteur.md  edge-case-enumerator.md  opencode.jsonc  package.json  plan_content.txt  plugin.ts  state-poisoner.md  tui.json
.tribunus/: .gitignore  README.md  config.json  package-lock.json
github/: README.md  action.yml  index.ts  package.json
local/: tier1-defect-clusters.md
locales/: ar.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  eu.json  fa.json  fi.json  fr.json  he.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  mr.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sv.json  sw.json  ta.json  te.json  th.json  tl.json  tr.json  uk.json  ur.json  vi.json  zh.json
valkey-9.1.0/src/modules/lua/: CMakeLists.txt  Makefile  engine_lua.c  function_lua.c
(+9889 files in other folders)
